--- a/Football_Players_Project_Notebook.ipynb
+++ b/Football_Players_Project_Notebook.ipynb
@@ -1660,7 +1660,7 @@
     "X_train = train_data[['age', 'overall', 'potential', 'position']]\n",
     "y_train = train_data['value']\n",
     "\n",
-    "# Data with missing values in 'value' column (for prediction).\n",
+    "# Data with missing values in 'value' column for prediction.\n",
     "missing_data = df[df['value'].isnull()]\n",
     "X_missing = missing_data[['age', 'overall', 'potential', 'position']]\n",
     "\n",
@@ -1692,7 +1692,7 @@
     "rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
     "r2 = r2_score(y_train, y_train_pred)\n",
     "\n",
-    "# Output evaluation metrics for Random Forest.\n",
+    "# Output evaluation metrics for Random Forest model.\n",
     "print(f\"Random Forest - MAE: {mae}, MSE: {mse}, RMSE: {rmse}, R2: {r2}\")"
    ]
   },
@@ -1740,7 +1740,7 @@
     "rmse_gb = mean_squared_error(y_train, y_train_pred_gb, squared=False)\n",
     "r2_gb = r2_score(y_train, y_train_pred_gb)\n",
     "\n",
-    "# Output evaluation metrics for Gradient Boosting.\n",
+    "# Output evaluation metrics for Gradient Boosting model.\n",
     "print(f\"Gradient Boosting - MAE: {mae_gb}, MSE: {mse_gb}, RMSE: {rmse_gb}, R2: {r2_gb}\")"
    ]
   },
@@ -1792,7 +1792,7 @@
     "# Predict on the rows with missing values.\n",
     "predictions_no_outliers = model_pipeline_no_outliers.predict(X_missing)\n",
     "\n",
-    "# Evaluate the model on training data (without outliers).\n",
+    "# Evaluate the model on training data without outliers.\n",
     "y_train_pred_no_outliers = model_pipeline_no_outliers.predict(X_train_no_outliers)\n",
     "\n",
     "# Calculate metrics for the model without outliers.\n",
