--- a/Football_Players_Project_Notebook.ipynb
+++ b/Football_Players_Project_Notebook.ipynb
@@ -3420,7 +3420,8 @@
    ],
    "source": [
     "# Issues existed when importing dataset into Power BI.\n",
-    "# Fill missing values in the specified columns with pd.NA and convert the data types to 'Int64' for handling nullable integers.\n",
+    "# Fill missing values in the specified columns with pd.NA,\n",
+    "# and convert the data types to 'Int64' for handling nullable integers.\n",
     "df['contract_valid_until'] = df['contract_valid_until'].fillna(pd.NA).astype('Int64')\n",
     "df['value'] = df['value'].fillna(pd.NA).astype('Int64')\n",
     "df['release_clause'] = df['release_clause'].fillna(pd.NA).astype('Int64')\n",
